--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -155,7 +155,7 @@ section{
 }
 
 .coolcolor2{
-    background-color: #ff6737;
+    background-color: #2d2a2e;
     color: #2d2a2e;
     padding: 16em;
     position: relative;
